--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "next": "^15.4.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
